@@ -10,7 +10,7 @@ import com.p2p.P2PClass;
 
 import java.net.URLDecoder;
 import java.net.URLEncoder;
-import java.util.Arrays;
+import java.util.List;
 
 public class JianPian implements Source.Extractor {
 
@@ -19,7 +19,7 @@ public class JianPian implements Source.Extractor {
 
     @Override
     public boolean match(Uri uri) {
-        return Arrays.asList("tvbox-xg", "jianpian", "ftp").contains(UrlUtil.scheme(uri));
+        return List.of("tvbox-xg", "jianpian", "ftp").contains(UrlUtil.scheme(uri));
     }
 
     private void init() {
